#4 feat: 新增注册功能
