# internal/handler/user/register_handler.go
@@ -1,0 +1,36 @@
+package user
+
+import (
+	"net/http"
+
+	"rank-master-back/internal/logic/user"
+	"rank-master-back/internal/svc"
+	"rank-master-back/internal/types"
+
+	"github.com/go-playground/validator"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func RegisterHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.RegisterReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		err := validator.New().StructCtx(r.Context(), req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := user.NewRegisterLogic(r.Context(), svcCtx)
+		resp, err := l.Register(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
